(reformulando codigo) commit

--- a/formulario.html
+++ b/formulario.html
@@ -30,10 +30,10 @@
                 <p>Sexo:</p>
                 <input type="radio" id="feminino" name="genero" value="feminino" required>
                 <label for="feminino">Feminino</label>
-                <input type="radio" id="masculino" name="genero" value="feminino" required>
-                <label for="feminino">Masculino</label>
-                <input type="radio" id="outro" name="genero" value="feminino" required>
-                <label for="feminino">Outro</label>
+                <input type="radio" id="masculino" name="genero" value="masculino" required>
+                <label for="masculino">Masculino</label>
+                <input type="radio" id="outro" name="genero" value="outro" required>
+                <label for="outro">Outro</label>
             </fieldset>
         </form>
     </div>
